--- a/ElectricCarsServices/templates/index.html
+++ b/ElectricCarsServices/templates/index.html
@@ -4,4 +4,18 @@
 
 {% block main %}
     <h1>Hello World</h1>
+    <h2>There is {{ data.cars.size }} cars.</h2>
+
+
+    <div class="col center justify m-5">
+
+        {% for c in data.cars.data %}
+            <div class="row m-2 p-2 border">
+                <div class="col">
+                    {{ c.name }}
+                </div>
+            </div>
+        {% endfor %}
+
+    </div>
 {% endblock %}
