--- a/ElectricCarsServices/templates/base.html
+++ b/ElectricCarsServices/templates/base.html
@@ -12,7 +12,9 @@
 <body>
 
 <header class="p-3 bg-dark text-white">
-    <h1>Electric car</h1>
+    <a href="/" class="text-decoration-none">
+        <h1>Electric car</h1>
+    </a>
 </header>
 
 
