--- a/ElectricCarsServices/templates/test_services.html
+++ b/ElectricCarsServices/templates/test_services.html
@@ -10,6 +10,7 @@
         <form method="post">
             <p>Car autonomy: <input value="0" min="0" name="car_autonomy"></p>
             <p>Charge Time: <input value="0" min="0" name="car_charge_time"></p>
+            <p>Average Speed: <input value="0" min="0" name="car_average_speed"></p>
             <p>Journey lenght: <input value="0" min="0" name="length"></p>
 
             <div class="row m-2 p-2">
