--- a/ElectricCarsServices/templates/base.html
+++ b/ElectricCarsServices/templates/base.html
@@ -11,10 +11,12 @@
 </head>
 <body>
 
-<header class="p-3 bg-dark text-white">
-    <a href="/" class="text-decoration-none">
+<header class="row p-3 bg-dark text-white">
+    <a href="/" class="col-2 text-decoration-none">
         <h1>Electric car</h1>
     </a>
+
+    <a class="col-2" href="{{ url_for("Test.testes") }}">Testes</a>
 </header>
 
 
