--- a/ElectricCarsServices/templates/test_car_ride.html
+++ b/ElectricCarsServices/templates/test_car_ride.html
@@ -11,7 +11,7 @@
             <p>To : <input value="43.296482" min="0" name="to_latitude"> ; <input value="5.36978" min="0" name="to_longitude"></p>
 
             <p>
-                <input value="{{ data.cars.data[0].name }}" name="car_name">
+                <input value="{{ data.cars[0].name }}" name="car_name">
 {#                <select name="car_name" id="car_name">#}
 {#                    {% for c in data.cars.data %}#}
 {#                        <option value="{{ c['name'] }}">{{ c['name'] }} - range: {{ c['range'] }}</option>#}
