--- a/ElectricCarsServices/templates/test_car_ride.html
+++ b/ElectricCarsServices/templates/test_car_ride.html
@@ -10,13 +10,8 @@
             <p>From : <input value="45.764043" min="0" name="from_latitude"> ; <input value="4.835659" min="0" name="from_longitude"></p>
             <p>To : <input value="43.296482" min="0" name="to_latitude"> ; <input value="5.36978" min="0" name="to_longitude"></p>
 
-            <p>
+            <p>Car name :
                 <input value="{{ data.cars[0].name }}" name="car_name">
-{#                <select name="car_name" id="car_name">#}
-{#                    {% for c in data.cars.data %}#}
-{#                        <option value="{{ c['name'] }}">{{ c['name'] }} - range: {{ c['range'] }}</option>#}
-{#                    {% endfor %}#}
-{#                </select>#}
             </p>
 
             <div class="row m-2 p-2">
