--- a/ElectricCarsServices/templates/test_distance.html
+++ b/ElectricCarsServices/templates/test_distance.html
@@ -11,7 +11,7 @@
             <p>To : <input value="43.296482" min="0" name="to_latitude"> ; <input value="5.36978" min="0" name="to_longitude"></p>
 
             <div class="row m-2 p-2">
-                <input class="col px-1 mx-1" type="submit" value="" formaction="{{ url_for("Ride.distance") }}">
+                <input class="col px-1 mx-1" type="submit" value="Test" formaction="{{ url_for("Ride.distance") }}">
             </div>
         </form>
     </div>
