--- a/ElectricCarsServices/templates/test_time.html
+++ b/ElectricCarsServices/templates/test_time.html
@@ -14,7 +14,7 @@
             <p>Journey lenght: <input value="0" min="0" name="length"></p>
 
             <div class="row m-2 p-2">
-                <input class="col px-1 mx-1" type="submit" value="" formaction="{{ url_for("Ride.time") }}">
+                <input class="col px-1 mx-1" type="submit" value="Test" formaction="{{ url_for("Ride.time") }}">
             </div>
         </form>
     </div>
