--- a/ElectricCarsServices/templates/test_car_ride.html
+++ b/ElectricCarsServices/templates/test_car_ride.html
@@ -15,9 +15,25 @@
             </p>
 
             <div class="row m-2 p-2">
-                <input class="col px-1 mx-1" type="submit" value="" formaction="{{ url_for("Ride.car_ride") }}">
+                <input class="col px-1 mx-1" type="submit" value="Test" formaction="{{ url_for("Ride.car_ride") }}">
             </div>
         </form>
+    </div>
+
+    <div class="border m-1 p-4">
+        <div class="row py-3">
+            <h4 class="col border">Car</h4>
+            <h4 class="col border">Charge Time</h4>
+            <h4 class="col border">Autonomy</h4>
+        </div>
+
+        {% for car in data.cars %}
+            <div class="row">
+                <div class="col border">{{ car.name }}</div>
+                <div class="col border">{{ car.charge_time }}</div>
+                <div class="col border">{{ car.range }}</div>
+            </div>
+        {% endfor %}
     </div>
 
 {% endblock %}
